; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_sysctl_net_ipv6.c_ipv6_sysctl_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_sysctl_net_ipv6.c_ipv6_sysctl_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEM = common dso_local global i32 0, align 4
@net_ipv6_ctl_path = common dso_local global i32 0, align 4
@ipv6_rotable = common dso_local global i32 0, align 4
@ip6_header = common dso_local global i32* null, align 8
@ipv6_sysctl_net_ops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipv6_sysctl_register() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @ENOMEM, align 4
  %3 = sub nsw i32 0, %2
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @net_ipv6_ctl_path, align 4
  %5 = load i32, i32* @ipv6_rotable, align 4
  %6 = call i32* @register_net_sysctl_rotable(i32 %4, i32 %5)
  store i32* %6, i32** @ip6_header, align 8
  %7 = load i32*, i32** @ip6_header, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  br label %16

10:                                               ; preds = %0
  %11 = call i32 @register_pernet_subsys(i32* @ipv6_sysctl_net_ops)
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* %1, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  br label %18

15:                                               ; preds = %10
  br label %16

16:                                               ; preds = %18, %15, %9
  %17 = load i32, i32* %1, align 4
  ret i32 %17

18:                                               ; preds = %14
  %19 = load i32*, i32** @ip6_header, align 8
  %20 = call i32 @unregister_net_sysctl_table(i32* %19)
  br label %16
}

declare dso_local i32* @register_net_sysctl_rotable(i32, i32) #1

declare dso_local i32 @register_pernet_subsys(i32*) #1

declare dso_local i32 @unregister_net_sysctl_table(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
